<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        app:srcCompat="@mipmap/floridastate"
        android:id="@+id/AwayTeamLogo"
        android:contentDescription="@string/logo_of_away_team"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="96dp" />

    <ImageView
        android:layout_height="98dp"
        app:srcCompat="@mipmap/notredame"
        android:id="@+id/HomeTeamLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/logo_of_home_team"
        android:layout_width="96dp" />

    <TextView
        android:text="@string/_84"
        android:layout_height="98dp"
        android:id="@+id/HomeScore"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/HomeTeamLogo"
        android:layout_width="73dp"
        android:contentDescription="@string/score_of_home_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:paddingTop="30dp"
        android:paddingBottom="6dp"
        android:paddingStart="17dp"
        android:paddingEnd="1dp" />

    <TextView
        android:text="@string/dashchar"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/HomeScore"
        android:id="@+id/dash"
        android:layout_width="45dp"
        android:contentDescription="@string/dash"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="80sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:paddingStart="7dp"
        android:paddingEnd="1dp" />

    <TextView
        android:text="@string/_72"
        android:layout_height="98dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/dash"
        android:id="@+id/AwayScore"
        android:layout_width="73dp"
        android:contentDescription="@string/score_of_away_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:paddingTop="30dp"
        android:paddingBottom="6dp"
        android:paddingStart="18dp"
        android:paddingEnd="1dp" />

    <TextView
        android:text="@string/_21_5"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/HomeRecord"
        android:layout_alignParentEnd="true"
        android:id="@+id/AwayRecord"
        android:textSize="24sp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center" />

    <TextView
        android:text="@string/saturday_feb_11_6_00pm"
        android:layout_width="match_parent"
        android:layout_marginTop="41dp"
        android:id="@+id/TipOff"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_below="@+id/AwayRecord"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/notre_dame"
        android:layout_below="@+id/HomeTeamLogo"
        android:layout_alignParentStart="true"
        android:id="@+id/HomeTeamName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:layout_marginStart="15dp" />

    <TextView
        android:text="@string/florida_state"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/HomeTeamName"
        android:layout_alignParentEnd="true"
        android:id="@+id/AwayTeamName"
        android:textSize="18sp"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/seminoles"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/HomeTeamMascot"
        android:layout_alignParentEnd="true"
        android:id="@+id/AwayTeamMascot"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:text="@string/_19_7"
        android:layout_marginTop="13dp"
        android:id="@+id/HomeRecord"
        android:layout_width="100dp"
        android:textSize="24sp"
        android:layout_height="30dp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:layout_below="@+id/HomeTeamMascot"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fighting_irish"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/HomeTeamMascot"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/HomeTeamName"
        android:layout_alignStart="@+id/HomeTeamName" />

    <Button
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TipOff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/Camera"
        android:onClick="startCamera" />
</RelativeLayout>