<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/TeamLogo"
        android:layout_marginRight="10dp"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/teamlogo"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/teamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TeamName"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="textStart"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/gamedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GameDate"
        android:layout_weight="1"
        android:textSize="15sp"
        android:layout_marginTop="18dp"
        android:textColor="@android:color/black"
        tools:ignore="InefficientWeight" />
</LinearLayout>